[package]
name = "gmail_api_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
yup-oauth2 = "8.3"
google-gmail1 = "5.0"
hyper = "0.14"
hyper-rustls = "0.24"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
log = "0.4"
env_logger = "0.10"
warp = "0.3"
base64 = "0.13"
scraper = "0.13"




